--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "flowbite": "^2.5.2",
     "pinia": "^2.3.0",
+    "sweetalert2": "^11.15.10",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.5.0",
