--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "flowbite": "^2.5.2",
     "pinia": "^2.3.0",
     "sweetalert2": "^11.15.10",
