--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "flowbite": "^2.5.2",
