--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/vue": "^2.2.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "flowbite": "^2.5.2",
     "pinia": "^2.3.0",
     "sweetalert2": "^11.15.10",
