--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^4.1.0",
     "flowbite": "^2.5.2",
+    "moment": "^2.30.1",
     "pinia": "^2.3.0",
     "sweetalert2": "^11.15.10",
     "vue": "^3.5.13",
