--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@heroicons/vue": "^2.2.0",
     "@tiptap/extension-color": "^2.11.3",
     "@tiptap/extension-text-style": "^2.11.3",
-    "@tiptap/pm": "^2.11.3",
-    "@tiptap/starter-kit": "^2.11.3",
-    "@tiptap/vue-3": "^2.11.3",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "@tiptap/vue-3": "^2.11.5",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "datatables.net-bs5": "^2.2.2",
+    "datatables.net-dt": "^2.2.2",
+    "datatables.net-select": "^3.0.0",
+    "datatables.net-vue3": "^3.0.4",
     "date-fns": "^4.1.0",
     "flowbite": "^2.5.2",
     "moment": "^2.30.1",
