--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/vue": "^2.2.0",
     "@tiptap/extension-color": "^2.11.3",
     "@tiptap/extension-text-style": "^2.11.3",
+    "@tiptap/extension-underline": "^2.11.5",
     "@tiptap/pm": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@tiptap/vue-3": "^2.11.5",
@@ -34,6 +35,7 @@
     "vue-sweetalert2": "^5.0.11"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
