--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sweetalert2": "^11.15.10",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
+    "vue-material-design-icons": "^5.3.1",
     "vue-router": "^4.5.0",
     "vue-sweetalert2": "^5.0.11"
   },
