--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "sweetalert2": "^11.15.10",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
-    "vue-js-toggle-button": "^1.3.3",
     "vue-material-design-icons": "^5.3.1",
     "vue-router": "^4.5.0",
-    "vue-sweetalert2": "^5.0.11"
+    "vue-sweetalert2": "^5.0.11",
+    "vue3-toggle": "^0.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
