--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.9",
     "datatables.net-bs5": "^2.2.2",
     "datatables.net-dt": "^2.2.2",
     "datatables.net-select": "^3.0.0",
@@ -31,6 +32,7 @@
     "sweetalert2": "^11.15.10",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
+    "vue-chartjs": "^5.3.2",
     "vue-material-design-icons": "^5.3.1",
     "vue-router": "^4.5.0",
     "vue-sweetalert2": "^5.0.11",
